add image sharpener

--- a/sass/mixins/css/_css3.sass
+++ b/sass/mixins/css/_css3.sass
@@ -266,3 +266,10 @@
     color: $color
   &:-ms-input-placeholder
     color: $color
+
+@mixin sharp-image-rendering
+  // image-rendering: -moz-crisp-edges
+  image-rendering:   -o-crisp-edges
+  image-rendering: -webkit-optimize-contrast
+  image-rendering: crisp-edges
+  -ms-interpolation-mode: nearest-neighbor
